force-app/main/default/objects/Prescription_Autre__c.object
<CustomObject>
    <fields>
        <fullName>Analyse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Analyse</label>
        <referenceTo>Analyse__c</referenceTo>
        <relationshipLabel>Prescriptions Autres</relationshipLabel>
        <relationshipName>Prescriptions_Autres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Commentaire</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyse médicale</fullName>
                    <default>true</default>
                    <label>Analyse médicale</label>
                </value>
                <value>
                    <fullName>Activité sportive</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visite__c</fullName>
        <label>Visite</label>
        <referenceTo>Visite__c</referenceTo>
        <relationshipLabel>Prescriptions Autres</relationshipLabel>
        <relationshipName>Prescriptions_Autres</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prescription Autre</label>
    <nameField>
        <displayFormat>Pre-{0000}</displayFormat>
        <label>Prescription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions Autres</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>